Styling | GameSettingsMenu X-Overflow Fix

--- a/src/styles/sass/components/layout/GameSettingsMenu.module.scss
+++ b/src/styles/sass/components/layout/GameSettingsMenu.module.scss
@@ -12,8 +12,6 @@
 
 .row {
   height: 100%;
-  padding: 0 15px;
-  display: flex;
   align-items: center;
   justify-content: center;
 }
@@ -29,5 +27,5 @@
 
 .innerWrapper {
   height: 100%;
-  width: 100%;
+  box-sizing: border-box;
 }
