--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -18,7 +18,7 @@ code {
 
 html, body, #root {
   @include fitMobileViewportHeight;
-  @include borderBoxSizing;
+  //@include borderBoxSizing;
   min-height: 100vh;
   background-color: $dark-3;
 }
